--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.3",
     "morgan": "^1.9.0",
     "promise.prototype.finally": "^3.1.0",
+    "sequelize": "^5.21.8",
     "sqlite3": "^4.0.2"
   }
 }
